testing basic structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Basic Math Quiz</title>
+        <link rel ="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
+        <div id ="quiz">
+            <h1>Math Quiz</h1>
+            <div id="question"></div>
+            <div id="options"></div>
+            <button id = "submit">submit</button>
+        </div>
+    </body>
+</html>
