fixed some things and updated styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <h1>Math Quiz</h1>
             <div id="question"></div>
             <div id="options"></div>
-            <button id = "submit">submit</button>
+            <button id = "submit">submit answer</button>
         </div>
     </body>
 </html>
